--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         .table th, .table td {
-            font-size: 14px;
+            font-size: 14git px;
         }
         .btn {
             font-size: 12px;
