--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
+        
         .table th, .table td {
             font-size: 14git px;
         }
@@ -72,7 +73,7 @@
             { edadMeses: 12, vacunas: [{ nombre: "Triple Viral", dosis: "1ª Dosis" }, { nombre: "Neumococo", dosis: "Refuerzo" }, { nombre: "Hepatitis A", dosis: "Única" }] },
             { edadMeses: 15, vacunas: [{ nombre: "Menigococo", dosis: "Refuerzo" }, { nombre: "Varicela", dosis: "Única" }] },  // Refuerzo de Polio a los 15 meses
             { edadMeses: 18, vacunas: [{ nombre: "Pentavalente", dosis: "1ª Refuerzo" }] },
-            { edadAños:   5, vacunas: [{ nombre: "Polio", dosis: "Refuerzo" }, { nombre: "Varicela", dosis: "2ª Dosis" }, { nombre: "Triple Viral", dosis: "2ª Dosis" }, { nombre: "Triple Bacteriana", dosis: "2ª Refuerzo" }] }
+            { edadMeses: 60, vacunas: [{ nombre: "Polio", dosis: "Refuerzo" }, { nombre: "Varicela", dosis: "2ª Dosis" }, { nombre: "Triple Viral", dosis: "2ª Dosis" }, { nombre: "Triple Bacteriana", dosis: "2ª Refuerzo" }] }
         ];
 
 
