--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </table>
                 </div>
                 <div class="text-center mt-4">
-                    <button class="btn btn-success" onclick="generarPDF()">Generar PDF de Faltantes</button>
+                    <button class="btn btn-success" onclick="generarPDF()">Generar PDF Vacunas Faltantes</button>
                 </div>
             </div>
         </div>
